init berita on index

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <section class="hero landing">
+      <div class="hero-overlay"></div>
       <div class="darken-overlay"></div>
       <div class="navbar">
         <div class="navbar-container">
@@ -42,9 +43,12 @@
         </div>
       </div>
 
-      <div class="landing-main"></div>
+      <div class="hero-main">
+        <p class="hero-title">Segala Tentang Kabupaten Batang.</p>
+        <p class="hero-desc">Mulai perjalanan dengan menggulir ke bawah</p>
+      </div>
 
-      <div class="landing-bottom">
+      <div class="hero-bottom">
         <img
           src="./assets/icons/down_arrow.svg"
           alt="downarrow"
@@ -53,8 +57,168 @@
       </div>
     </section>
 
-    <section class="main"> </section>
+    <section class="main">
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a class="section-header-title"
+              >Berita <strong>Pemerintahan</strong></a
+            >
+            <img
+              src="./assets/icons/triangle-right.svg"
+              alt=">"
+              class="triangle-link-icon big-triangle"
+            />
+            <div class="hover-reveal">Lihat Lagi</div>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
 
+        <div class="main-sections-container fd-r">
+          <img
+            src="./assets/images/berita/utama.jpeg"
+            alt="berita-pemerintahan"
+            class="berita-img"
+          />
+          <div class="berita-pemerintahan-text-container">
+            <p class="berita-pemerintahan-title">
+              Pemkab Batang Paparkan 8 Misi Pembangunan di Musrenbang RPJMD
+              2025-2029</p
+            >
+            <p class="berita-pemerintahan-text">
+              Pemerintah Kabupaten Batang melalui Badan Perencanaan Pembangunan,
+              Riset dan Inovasi Daerah (Bapperida) menggelar Musyawarah
+              Perencanaan Pembangunan (Musrenbang) dalam rangka penyusunan
+              Rencana Pembangunan Jangka Menengah Daerah (RPJMD) 2025 di Aula
+              Bupati Batang, Kabupaten Batang, Kamis (15/5/2025).
+            </p>
+
+            <div class="triangle-link-container">
+              <img
+                src="./assets/icons/triangle-right.svg"
+                alt=">"
+                class="triangle-link-icon small-triangle"
+              />
+              <a href="" class="berita-pemerintahan-link"
+                >Baca Selengkapnya...</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a class="section-header-title">Berita <strong>Terbaru</strong></a>
+            <img
+              src="./assets/icons/triangle-right.svg"
+              alt=">"
+              class="triangle-link-icon big-triangle"
+            />
+            <div class="hover-reveal">Lihat Lagi</div>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container"></div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a class="section-header-title">Berita <strong>Foto</strong></a>
+            <img
+              src="./assets/icons/triangle-right.svg"
+              alt=">"
+              class="triangle-link-icon big-triangle"
+            />
+            <div class="hover-reveal">Lihat Lagi</div>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container">
+          <div class="berita-foto-row">
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_1.jpg" alt="1" />
+                Tandatangan Pakta Integritas
+              </a>
+            </div>
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_2.jpg" alt="2" />
+                Pelantikan 1.516 PPPK
+              </a>
+            </div>
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_3.jpg" alt="3" />
+                Penghargaan PNS Berprestasi
+              </a>
+            </div>
+          </div>
+
+          <div class="berita-foto-row">
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_4.jpg" alt="4" />
+                Sumpah Janji Pimpinan DPRD Batang
+              </a>
+            </div>
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_5.jpg" alt="5" />
+                Tandatangan Pakta Integritas
+              </a>
+            </div>
+            <div class="berita-foto-container">
+              <a href="" class="berita-foto-link">
+                <img src="./assets/images/berita/b_foto_6.jpg" alt="6" />
+                Bacaan Pakta Integritas
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a class="section-header-title">Channel <strong>Video</strong></a>
+            <img
+              src="./assets/icons/triangle-right.svg"
+              alt=">"
+              class="triangle-link-icon big-triangle"
+            />
+            <div class="hover-reveal">Lihat Lagi</div>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container"></div>
+      </div>
+
+      <div class="main-sections">
+        <div class="section-header">
+          <div class="triangle-link-container ai-c">
+            <a class="section-header-title"
+              >Banner Pemerintah <strong>Kabupaten Batang</strong></a
+            >
+            <img
+              src="./assets/icons/triangle-right.svg"
+              alt=">"
+              class="triangle-link-icon big-triangle"
+            />
+            <div class="hover-reveal">Lihat Lagi</div>
+          </div>
+          <div class="horizontal-line bg-primary-gradient"></div>
+        </div>
+
+        <div class="main-sections-container"></div>
+      </div>
+    </section>
     <script src="./components/navbar.js"></script>
   </body>
 </html>
