--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -12,6 +12,7 @@
   </head>
   <body>
     <section class="hero">
+      <div class="hero-overlay"></div>
       <div class="darken-overlay"></div>
       <div class="navbar">
         <div class="navbar-container">
@@ -43,6 +44,10 @@
             />
           </div>
         </div>
+      </div>
+
+      <div class="hero-main">
+        <p class="hero-title">Layanan Kami</p>
       </div>
     </section>
 
