--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
       <div class="darken-overlay"></div>
       <div class="navbar">
         <div class="navbar-container">
-          <img
-            src="./assets/images/logo.png"
-            alt="BatangKab"
-            class="nav-logo"
-          />
+          <a href="../index.html">
+            <img
+              src="./assets/images/logo.png"
+              alt="BatangKab"
+              class="nav-logo"
+            />
+          </a>
           <div class="nav-mid">
             <div class="nav-dropdown-container">
               <div class="nav-dropdown nav-item">
