--- a/pages/berita.html
+++ b/pages/berita.html
@@ -14,11 +14,13 @@
     <section class="hero landing">
       <div class="navbar">
         <div class="navbar-container bg-primary-gradient">
-          <img
-            src="../assets/images/logo.png"
-            alt="BatangKab"
-            class="nav-logo"
-          />
+          <a href="../index.html">
+            <img
+              src="../assets/images/logo.png"
+              alt="BatangKab"
+              class="nav-logo"
+            />
+          </a>
           <div class="nav-mid">
             <div class="nav-dropdown-container">
               <div class="nav-dropdown nav-item">
