update news page

--- a/index.html
+++ b/index.html
@@ -27,20 +27,60 @@
             <div class="nav-dropdown-container">
               <div class="nav-dropdown nav-item">
                 Mengenai Batang
-                <img src="./assets/icons/triangle-down.svg" alt="V" />
+                <div class="dropdown-arrow"></div>
               </div>
               <div class="dropdown-buffer"></div>
               <div class="dropdown-menu">
-                <a href="./pages/struktur.html">Struktur Organisasi</a>
+                <a href="./pages/struktur.html">Batang Terkini</a>
                 <div class="horizontal-line thin"></div>
-                <a href="./pages/visi-misi.html">Visi & Misi</a>
+                <a href="./pages/visi-misi.html">Kilas Batang</a>
                 <div class="horizontal-line thin"></div>
-                <a href="./pages/bupati.html">Bupati & Wakil</a>
+                <a href="./pages/bupati.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Potensi</a>
               </div>
             </div>
 
-            <div class="nav-dropdown nav-item">Pemerintahan</div>
-            <div class="nav-dropdown nav-item">Informasi</div>
+            <div class="nav-dropdown-container">
+              <div class="nav-dropdown nav-item">
+                Pemerintahan
+                <div class="dropdown-arrow"></div>
+              </div>
+              <div class="dropdown-buffer"></div>
+              <div class="dropdown-menu">
+                <a href="./pages/struktur.html">Batang Terkini</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/visi-misi.html">Kilas Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Potensi</a>
+              </div>
+            </div>
+
+            <div class="nav-dropdown-container">
+              <div class="nav-dropdown nav-item">
+                Informasi
+                <div class="dropdown-arrow"></div>
+              </div>
+              <div class="dropdown-buffer"></div>
+              <div class="dropdown-menu">
+                <a href="./pages/struktur.html">Batang Terkini</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/visi-misi.html">Kilas Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="./pages/bupati.html">Potensi</a>
+              </div>
+            </div>
+
             <a href="./pages/layanan.html" class="nav-link nav-item">Layanan</a>
           </div>
           <div class="search-bar">
