--- a/pages/berita.html
+++ b/pages/berita.html
@@ -25,20 +25,60 @@
             <div class="nav-dropdown-container">
               <div class="nav-dropdown nav-item">
                 Mengenai Batang
-                <img src="../assets/icons/triangle-down.svg" alt="V" />
+                <div class="dropdown-arrow"></div>
               </div>
               <div class="dropdown-buffer"></div>
               <div class="dropdown-menu">
-                <a href="./pages/struktur.html">Struktur Organisasi</a>
+                <a href="../index.html">Batang Terkini</a>
                 <div class="horizontal-line thin"></div>
-                <a href="./pages/visi-misi.html">Visi & Misi</a>
+                <a href="../index.html">Kilas Batang</a>
                 <div class="horizontal-line thin"></div>
-                <a href="./pages/bupati.html">Bupati & Wakil</a>
+                <a href="../index.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Potensi</a>
               </div>
             </div>
 
-            <div class="nav-dropdown nav-item">Pemerintahan</div>
-            <div class="nav-dropdown nav-item">Informasi</div>
+            <div class="nav-dropdown-container">
+              <div class="nav-dropdown nav-item">
+                Pemerintahan
+                <div class="dropdown-arrow"></div>
+              </div>
+              <div class="dropdown-buffer"></div>
+              <div class="dropdown-menu">
+                <a href="../index.html">Batang Terkini</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Kilas Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Potensi</a>
+              </div>
+            </div>
+
+            <div class="nav-dropdown-container">
+              <div class="nav-dropdown nav-item">
+                Informasi
+                <div class="dropdown-arrow"></div>
+              </div>
+              <div class="dropdown-buffer"></div>
+              <div class="dropdown-menu">
+                <a href="../index.html">Batang Terkini</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Kilas Batang</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Geografis</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Wilayah</a>
+                <div class="horizontal-line thin"></div>
+                <a href="../index.html">Potensi</a>
+              </div>
+            </div>
+
             <a href="./pages/layanan.html" class="nav-link nav-item">Layanan</a>
           </div>
           <div class="search-bar">
@@ -59,8 +99,10 @@
     </section>
 
     <section class="main">
-      <div id="article-detail"></div>
+      <div class="berita-container"> </div>
+      <div class="vertical-line"></div>
+      <div class="berita-lainnya-container"></div>
     </section>
-    <script src="../components/loadNews.js"></script>
+    <script src="../components/fullNews.js"></script>
   </body>
 </html>
