full-news page update

--- a/pages/berita.html
+++ b/pages/berita.html
@@ -99,10 +99,11 @@
     </section>
 
     <section class="main">
-      <div class="berita-container"> </div>
+      <div class="main-berita-container"> </div>
       <div class="vertical-line"></div>
-      <div class="berita-lainnya-container"></div>
+      <div class="berita-lainnya-container" id="berita-lainnya"> </div>
     </section>
     <script src="../components/fullNews.js"></script>
+    <script src="../components/columnNews.js"></script>
   </body>
 </html>
