--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/styles/master.css" />
     <link rel="stylesheet" href="./assets/styles/animations.css" />
     <link rel="stylesheet" href="./assets/styles/hero.css" />
+    <link rel="stylesheet" href="./assets/styles/footer.css" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
   </head>
   <body>
@@ -299,25 +300,31 @@
           </div>
         </div>
       </div>
+    </section>
 
-      <div class="main-sections">
-        <div class="section-header">
-          <div class="triangle-link-container ai-c">
-            <a class="section-header-title"
-              >Banner Pemerintah <strong>Kabupaten Batang</strong></a
-            >
-            <img
-              src="./assets/icons/triangle-right.svg"
-              alt=">"
-              class="triangle-link-icon big-triangle"
-            />
-            <div class="hover-reveal">Lihat Lagi</div>
-          </div>
-          <div class="horizontal-line bg-primary-gradient"></div>
+    <section class="footer bg-darkgray-gradient">
+      <div class="footer-top">
+        <div class="footer-top-container jc-c">
+          <img src="./assets/images/logo.png" alt="logo" />
         </div>
-
-        <div class="main-sections-container"></div>
+        <div class="footer-top-container">
+          <p class="footer-title">Tautan Utama</p>
+          <a href="./index.html" class="footer-link">Berita Seputar Batang</a>
+          <a href="./index.html" class="footer-link">Pemerintahan Kami</a>
+          <a href="./index.html" class="footer-link">Tentang Batang</a>
+          <a href="./index.html" class="footer-link">Layanan Kami</a>
+        </div>
+        <div class="footer-top-container">
+          <p class="footer-title">Kontak Kami</p>
+          <p class="footer-text">Sekretariat Daerah Kabupaten Batang</p>
+          <p class="footer-text">Jl. RA Kartini No. 1 Batang</p>
+          <p class="footer-text">Telp : (0285) 391571 Fax : (0285) 391051</p>
+          <p class="footer-text">E-mail : setda@batangkab.go.id</p>
+        </div>
       </div>
+      <div class="footer-bottom"
+        >© 2016-2025 Dinas Komunikasi dan Informatika Kabupaten Batang</div
+      >
     </section>
     <script src="./components/navbar.js"></script>
     <script src="./components/news.js"></script>
