--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="../assets/styles/master.css" />
     <link rel="stylesheet" href="../assets/styles/animations.css" />
     <link rel="stylesheet" href="../assets/styles/hero.css" />
+    <link rel="stylesheet" href="../assets/styles/footer.css" />
     <link rel="stylesheet" href="../assets/styles/layanan.css" />
   </head>
   <body>
