--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./assets/styles/animations.css" />
     <link rel="stylesheet" href="./assets/styles/hero.css" />
     <link rel="stylesheet" href="./assets/styles/footer.css" />
+    <link rel="stylesheet" href="./assets/styles/accessibility.css" />
     <link rel="stylesheet" href="./assets/styles/index.css" />
   </head>
   <body>
@@ -326,7 +327,50 @@
         >© 2016-2025 Dinas Komunikasi dan Informatika Kabupaten Batang</div
       >
     </section>
+
+    <div class="accessibility">
+      <img
+        src="./assets/icons/accessability.png"
+        alt="accessability"
+        id="accessability-btn"
+      />
+      <div class="accessibility-menu">
+        <img src="./assets/icons/close.svg" alt="X" id="acc-close-btn" />
+        <p class="acc-menu-title">Menu Aksesibilitas</p>
+        <div class="horizontal-line"></div>
+        <div class="acc-row">
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Mode Gelap
+          </div>
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Perkecil Teks
+          </div>
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Perbesar Teks
+          </div>
+        </div>
+        <div class="acc-row">
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Kejenuhan
+          </div>
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Ramah Disleksia
+          </div>
+          <div class="acc-card">
+            <img src="./assets/icons/darkmode.svg" alt="darkmode" />
+            Bahasa Sunda
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="./components/navbar.js"></script>
     <script src="./components/news.js"></script>
+    <script src="./components/accessibility.js"></script>
   </body>
 </html>
