--- a/index.html
+++ b/index.html
@@ -339,29 +339,29 @@
         <p class="acc-menu-title">Menu Aksesibilitas</p>
         <div class="horizontal-line"></div>
         <div class="acc-row">
-          <div class="acc-card">
+          <div class="acc-card" id="darkmode-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Mode Gelap
           </div>
-          <div class="acc-card">
+          <div class="acc-card" id="smalltext-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Perkecil Teks
           </div>
-          <div class="acc-card">
+          <div class="acc-card" id="bigtext-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Perbesar Teks
           </div>
         </div>
         <div class="acc-row">
-          <div class="acc-card">
+          <div class="acc-card" id="saturation-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Kejenuhan
           </div>
-          <div class="acc-card">
+          <div class="acc-card" id="disleksia-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Ramah Disleksia
           </div>
-          <div class="acc-card">
+          <div class="acc-card" id="sunda-btn">
             <img src="./assets/icons/darkmode.svg" alt="darkmode" />
             Bahasa Sunda
           </div>
