--- a/pages/layanan.html
+++ b/pages/layanan.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../assets/styles/animations.css" />
     <link rel="stylesheet" href="../assets/styles/hero.css" />
     <link rel="stylesheet" href="../assets/styles/footer.css" />
+    <link rel="stylesheet" href="../assets/styles/accessibility.css" />
     <link rel="stylesheet" href="../assets/styles/layanan.css" />
   </head>
   <body>
@@ -54,6 +55,76 @@
 
     <section class="main"> </section>
 
+    <section class="footer bg-darkgray-gradient">
+      <div class="footer-top">
+        <div class="footer-top-container jc-c">
+          <img src="../assets/images/logo.png" alt="logo" />
+        </div>
+        <div class="footer-top-container">
+          <p class="footer-title">Tautan Utama</p>
+          <a href="../index.html" class="footer-link">Berita Seputar Batang</a>
+          <a href="../index.html" class="footer-link">Pemerintahan Kami</a>
+          <a href="../index.html" class="footer-link">Tentang Batang</a>
+          <a href="../index.html" class="footer-link">Layanan Kami</a>
+        </div>
+        <div class="footer-top-container">
+          <p class="footer-title">Kontak Kami</p>
+          <p class="footer-text">Sekretariat Daerah Kabupaten Batang</p>
+          <p class="footer-text">Jl. RA Kartini No. 1 Batang</p>
+          <p class="footer-text">Telp : (0285) 391571 Fax : (0285) 391051</p>
+          <p class="footer-text">E-mail : setda@batangkab.go.id</p>
+        </div>
+      </div>
+      <div class="footer-bottom"
+        >© 2016-2025 Dinas Komunikasi dan Informatika Kabupaten Batang</div
+      >
+    </section>
+
+    <div class="accessibility">
+      <div class="acc-img-container">
+        <img
+          src="../assets/icons/accessability.png"
+          alt="accessability"
+          id="accessability-btn"
+        />
+      </div>
+
+      <div class="accessibility-menu">
+        <img src="../assets/icons/close.svg" alt="X" id="acc-close-btn" />
+        <p class="acc-menu-title">Menu Aksesibilitas</p>
+        <div class="horizontal-line"></div>
+        <div class="acc-row">
+          <div class="acc-card" id="darkmode-btn">
+            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            Mode Gelap
+          </div>
+          <div class="acc-card" id="smalltext-btn">
+            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            Perkecil Teks
+          </div>
+          <div class="acc-card" id="bigtext-btn">
+            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            Perbesar Teks
+          </div>
+        </div>
+        <div class="acc-row">
+          <div class="acc-card" id="saturation-btn">
+            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            Kejenuhan
+          </div>
+          <div class="acc-card" id="disleksia-btn">
+            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            Ramah Disleksia
+          </div>
+          <div class="acc-card" id="sunda-btn">
+            <img src=".../assets/icons/darkmode.svg" alt="darkmode" />
+            Bahasa Sunda
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="../components/navbar.js"></script>
+    <script src="../components/accessibility.js"></script>
   </body>
 </html>
