--- a/index.html
+++ b/index.html
@@ -329,11 +329,14 @@
     </section>
 
     <div class="accessibility">
-      <img
-        src="./assets/icons/accessability.png"
-        alt="accessability"
-        id="accessability-btn"
-      />
+      <div class="acc-img-container">
+        <img
+          src="./assets/icons/accessability.png"
+          alt="accessability"
+          id="accessability-btn"
+        />
+      </div>
+
       <div class="accessibility-menu">
         <img src="./assets/icons/close.svg" alt="X" id="acc-close-btn" />
         <p class="acc-menu-title">Menu Aksesibilitas</p>
