init berita-list, renderNews update, renderAll init

--- a/index.html
+++ b/index.html
@@ -373,7 +373,8 @@
     </div>
 
     <script src="./components/navbar.js"></script>
-    <script src="./components/news.js"></script>
+    <script src="./components/renderNews.js"></script>
+    <script src="./components/index.js"></script>
     <script src="./components/accessibility.js"></script>
   </body>
 </html>
