update accessibility in berita and berita-list

--- a/pages/berita.html
+++ b/pages/berita.html
@@ -141,34 +141,63 @@
       </div>
 
       <div class="accessibility-menu">
-        <img src="../assets/icons/close.svg" alt="X" id="acc-close-btn" />
+        <img
+          src="../assets/icons/close.svg"
+          alt="X"
+          id="acc-close-btn"
+          class="invert-icons"
+        />
         <p class="acc-menu-title">Menu Aksesibilitas</p>
         <div class="horizontal-line"></div>
         <div class="acc-row">
           <div class="acc-card" id="darkmode-btn">
-            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Mode Gelap
           </div>
           <div class="acc-card" id="smalltext-btn">
-            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Perkecil Teks
           </div>
           <div class="acc-card" id="bigtext-btn">
-            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Perbesar Teks
           </div>
         </div>
         <div class="acc-row">
           <div class="acc-card" id="saturation-btn">
-            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Kejenuhan
           </div>
           <div class="acc-card" id="disleksia-btn">
-            <img src="../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Ramah Disleksia
           </div>
           <div class="acc-card" id="sunda-btn">
-            <img src=".../assets/icons/darkmode.svg" alt="darkmode" />
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
             Bahasa Sunda
           </div>
         </div>
