--- a/pages/berita-list.html
+++ b/pages/berita-list.html
@@ -138,6 +138,79 @@
       >
     </section>
 
+    <div class="accessibility">
+      <div class="acc-img-container">
+        <img
+          src="../assets/icons/accessability.png"
+          alt="accessability"
+          id="accessability-btn"
+        />
+      </div>
+
+      <div class="accessibility-menu">
+        <img
+          src="../assets/icons/close.svg"
+          alt="X"
+          id="acc-close-btn"
+          class="invert-icons"
+        />
+        <p class="acc-menu-title">Menu Aksesibilitas</p>
+        <div class="horizontal-line"></div>
+        <div class="acc-row">
+          <div class="acc-card" id="darkmode-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Mode Gelap
+          </div>
+          <div class="acc-card" id="smalltext-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Perkecil Teks
+          </div>
+          <div class="acc-card" id="bigtext-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Perbesar Teks
+          </div>
+        </div>
+        <div class="acc-row">
+          <div class="acc-card" id="saturation-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Kejenuhan
+          </div>
+          <div class="acc-card" id="disleksia-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Ramah Disleksia
+          </div>
+          <div class="acc-card" id="sunda-btn">
+            <img
+              src="../assets/icons/darkmode.svg"
+              alt="darkmode"
+              class="invert-icons"
+            />
+            Bahasa Sunda
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script src="../components/renderNews.js"></script>
     <script src="../components/beritaList.js"></script>
     <script src="../components/accessibility.js"></script>
